--- a/systems.html
+++ b/systems.html
@@ -54,8 +54,14 @@
 
     <nav class="nav-fixed">
         <div class="nav-wrapper">
-            <!-- Nav Menu Button -->
-            <button class="menu-btn">&#9776;</button>
+            <!-- Nav Menu Button &#9776;-->
+            <div class="menu-btn">
+              <div class="navbar">
+                <div class="first"></div>
+                <div class="second"></div>
+                <div class="third"></div>
+              </div>
+            </div>
             
             <div id="nav-title">High-Performance Systems</div>
 
