--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -3,7 +3,7 @@
 <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="../IMG/favicon.png">
     <meta charset="UTF-8">
-    <title>Climate Control</title>
+    <title>Climate Management</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../CSS/global.css" media="screen">
 
@@ -30,7 +30,7 @@
               </div>
             </div>
             
-            <div id="nav-title">Climate Control</div>
+            <div id="nav-title">Climate Management</div>
 
             <a href="../index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
