--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="nav-spacer"></div>
 
     <!-- Content -->
-    <div class="container">
+    <div class="container" style="background: white;">
 
         <h1>Homes That Work For Us</h1>
 
