--- a/Systems/ev-charging.html
+++ b/Systems/ev-charging.html
@@ -56,15 +56,17 @@
         <p>A Chevrolet Volt gets 45 miles per gallon while running on gasoline, and 0.3 kWh/mile running on electricity only. If gasoline costs $3.50 / gallon, then the fuel cost to drive on gasoline is 7.8 cents per mile. If electricity costs 25 cents / kWh, then the cost per mile is roughly equivalent at 7.5 cents per mile. However, in some utility districts, off-peak period electricity is only ~7 cents per kWh, so the cost per mile (electric) is only 2.2 cents, about a quarter of the cost compared to gasoline.</p>
 
 
+    </div>
     
-<!--         <div class="bottom-nav-wrapper">
+    <div class="bottom-nav-wrapper">
+        <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="../Systems/sound-air.html">< Sound &amp; Air Handling</a>
+                        <a href="../Systems/solar-panels.html">Solar Panels</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/electricity.html">Electricity ></a>
+                        <a href="../Systems/water.html">Water Management</a>
             </button>
-        </div> -->
+        </div>
     </div>
 
 
