--- a/Systems/solar-panels.html
+++ b/Systems/solar-panels.html
@@ -68,15 +68,15 @@
 
          <p>To sum up the conclusions from this example, with solar PV one could generate electricity for about 10 cents/kWh, and offset purchases at 25 cents/kWh. Any power overgenerated at the end of a 12-month period would be compensated at 6 cents/kWh.</p>
 
+    </div>
     
-<!--         <div class="bottom-nav-wrapper">
-            <button  class="float-left bottom-nav">
-                        <a href="../Systems/sound-air.html">< Sound &amp; Air Handling</a>
-            </button>
+    <div class="bottom-nav-wrapper">
+        <div class="container">
+            
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/electricity.html">Electricity ></a>
+                        <a href="../Systems/ev-charging.html">E.V. Charging</a>
             </button>
-        </div> -->
+        </div>
     </div>
 
 
