--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -146,15 +146,17 @@
             <figcaption>Thermal Loss Before/After Continous Insulation</figcaption>
         </figure>
 
+    </div>
     
-<!--         <div class="bottom-nav-wrapper">
+    <div class="bottom-nav-wrapper">
+        <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="../Systems/sound-air.html">< Sound &amp; Air Handling</a>
+                        <a href="../Systems/water.html">Water Management</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/electricity.html">Electricity ></a>
+                        <a href="../Systems/climate.html">Climate Control</a>
             </button>
-        </div> -->
+        </div>
     </div>
 
 
