--- a/Systems/greywater.html
+++ b/Systems/greywater.html
@@ -76,17 +76,17 @@
 
         <p>The system installed in LilyPad was the first greywater system to be permitted in Redwood City. As such, it went through an extraordinary amount of review, and the approval process was long. The homeowners have every reason to hope that future greywater systems will be dealt with more routinely by permitting authorities.</p>
 
-
-
+    </div>
     
-<!--         <div class="bottom-nav-wrapper">
+    <div class="bottom-nav-wrapper">
+        <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="../Systems/sound-air.html">< Sound &amp; Air Handling</a>
+                        <a href="../Systems/electricity.html">Electricity</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/electricity.html">Electricity ></a>
+                        <a href="../Systems/recirc-loop.html">Recirculating Loops</a>
             </button>
-        </div> -->
+        </div>
     </div>
 
 
