--- a/Systems/recirc-loop.html
+++ b/Systems/recirc-loop.html
@@ -55,18 +55,17 @@
 
         <p>Depending on the design of the plumbing system and the usage patterns of the building occupants, a recirculating design can also save significant amounts of energy involved in heating water that then just cools off in pipes.</p>
 
-
-
-
+    </div>
     
-<!--         <div class="bottom-nav-wrapper">
+    <div class="bottom-nav-wrapper">
+        <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="../Systems/sound-air.html">< Sound &amp; Air Handling</a>
+                        <a href="../Systems/greywater.html">Greywater</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/electricity.html">Electricity ></a>
+                        <a href="../Systems/sound-air.html">Sound &amp; Air Handling</a>
             </button>
-        </div> -->
+        </div>
     </div>
 
 
