a few new images

--- a/design.html
+++ b/design.html
@@ -111,7 +111,7 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="IMG/Design/kid-jumprope.jpg">
+                    <img src="IMG/Design/outside-in3.jpg">
                 </div>
 
                 <div class="split right">
@@ -127,7 +127,7 @@
         <div class="row">
             <div class="column">
                 <div class="split right">
-                    <img src="IMG/Design/outside-in3.jpg">
+                    <img src="IMG/Home/windows.jpg">
                 </div>
                 <div class="split left">
                     <div class="copy-block">
