--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="row">
             <div class="column">
                 <div class="split right">
-                     <img src="IMG/Home/windows.jpg">
+                     <img src="IMG/Home/josh-moore-design.jpg">
                 </div>
                 <div class="split left">
                     <div class="copy-block">
