--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         #systems-content {
             max-width: 1000px;
             margin: 0 auto;
-            padding-top: 30px;
+            padding: 20px;
             color: white;
             background: #3c3c3ce8;
             position: relative;
@@ -41,12 +41,6 @@
             font-size:18px;
         }
         
-        #moreSystems {
-            left: 50%;
-            margin-left: -70px;
-            margin-bottom: 30px;
-            border-radius: 10px;
-        }
         
         #moreSystems a {
             color: black;
