--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
 
         <div class="row threecol-wrapper">
             <div class="three-column">
-                <img class="icons" src="Icons/net-positive.png" />
+                <img class="icons" src="Icons/net-positive.jpeg" />
                 <h2>Net Positive Energy</h2>
                 <p class="body-sm">Stop paying energy bills. Generate your own energy through rooftop solar to power your cars, house, and life.</p>
             </div>
             <div class="three-column">
-                <img class="icons"  src="Icons/great-experience.png" />
+                <img class="icons"  src="Icons/great-experience.jpeg" />
                 <h2>Great Experience</h2>
                 <p class="body-sm">Your home should be comfortable, healthy, convenient, and delightful. Let’s build homes that work for us.</p>
             </div>
             <div class="three-column">
-                <img class="icons"  src="Icons/community.png" />
+                <img class="icons"  src="Icons/community.jpeg" />
                 <h2>Build Community</h2>
                 <p class="body-sm">
                 By using human-centered design, your home will be a joyful experience that fosters interaction through welcoming spaces that encourage connection.  
