--- a/footer.html
+++ b/footer.html
@@ -15,7 +15,7 @@
         </div>
         <!--End MailChimp-->
 
-        <span id="copyright">Copyright &copy; <span id="current-year"></span>.&nbsp;<a href="legal.html">Legal Policy</a> | All rights reserved. Made by <a href="https://nuanced.design">Nuanced Design</a>.</span>
+        <span id="copyright">Copyright &copy; <span id="current-year"></span>&nbsp;All rights reserved&nbsp;|&nbsp;<a href="legal.html">Legal Policy</a>&nbsp;|&nbsp;Made by <a href="https://nuanced.design">Nuanced Design</a></span>
 </footer>
 
 <script>
