Content tweak on ev-charging.html

--- a/Systems/ev-charging.html
+++ b/Systems/ev-charging.html
@@ -43,17 +43,17 @@
 
         <p><a href="../systems.html">Systems</a> > <a href="../Systems/electricity.html">Electricity</a> > <b>E.V. Charging</b></p>
 
-         <p>Electric cars require a charger. You can choose between faster chargers (under an hour for a full charge) which will cost more to install or slower chargers which can run off normal household power.  In terms of the house wiring, it is simply another electrical appliance, albeit the largest one in the house. Ideally, you wire it on its own circuit or put it on a circuit that can accomodate the power needs of your chosen charger.</p>
+         <p>Electric cars require a charger. You can choose between faster chargers (few hours for a full charge) which will cost more to install, or slower chargers which can use normal household circuits.  In terms of the house wiring, it is simply another electrical appliance, albeit the largest one in the house in many cases. Ideally, you wire it on its own circuit, but at the very least make sure the circuit it's on can accomodate the power needs of your chosen charger.</p>
 
          <figure class="clear">
             <img src="../IMG/Deep-Dive/curbside-charging2.jpg" />
             <figcaption>LilyPad generates enough power to charge three electric cars</figcaption>
         </figure>
 
-        <p>Electric utilities provide incentives for electric car owners to charge during the utility’s lowest-cost time period, generally the middle of the night. Electric cars all  come with software onboard to charge preferentially during these lowest-cost periods, while still having the car fully charged when the owner needs it to be.</p>
+        <p>Electric utilities provide incentives for electric car owners to charge during the utility’s lowest-cost time period, generally the middle of the night. Electric cars all come with software onboard to charge preferentially during these lowest-cost periods, while still having the car fully charged when the owner needs it to be.</p>
 
         <h2>Electric car economics</h2>
-        <p>A Chevrolet Volt gets 45 miles per gallon while running on gasoline, and 0.3 kWh/mile running on electricity only. If gasoline costs $3.50 / gallon, then the fuel cost to drive on gasoline is 7.8 cents per mile. If electricity costs 25 cents / kWh, then the cost per mile is roughly equivalent at 7.5 cents per mile. However, in some utility districts, off-peak period electricity is only ~7 cents per kWh, so the cost per mile (electric) is only 2.2 cents, about a quarter of the cost compared to gasoline.</p>
+        <p>A Chevrolet Volt gets 45 miles per gallon while running on gasoline, and 0.3 kWh/mile running on electricity only. If gasoline costs $3.50 / gallon, then the fuel cost to drive on gasoline is 7.8 cents per mile (much better than most cars). If electricity costs 25 cents / kWh, then the cost per mile is roughly equivalent at 7.5 cents per mile. However, in many utility districts off-peak period electricity is much cheaper, only ~7 cents per kWh, so the cost per mile (electric) is only 2.2 cents, about a quarter of the cost compared to gasoline.</p>
 
 
     </div>
