Content tweaks to design.html

--- a/design.html
+++ b/design.html
@@ -52,7 +52,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Design Philosophy</h2>
-                        <p class="body-md">Your home should last two centuries. By designing a space that is built for people, you will foster organic interactions and connection. Sitting circles connect to an abundance of walking paths and modular spaces that are reconfigurable and functionable. High-quality materials and well-designed systems not only save money and time, but are a wonderful experience.</p>
+                        <p class="body-md">A well-built home should last centuries. By designing a space that is built for people, you will foster organic interactions and connection. Sitting circles connect to an abundance of walking paths and modular spaces that are reconfigurable and functionable. High-quality materials and well-designed systems not only save money and time, but are a wonderful experience.</p>
                     </div>
                 </div>     
             </div>
@@ -65,7 +65,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Welcoming Public Front</h2>
-                        <p class="body-md"> Like many American homes, LilyPad originally had a garage jutting out from the front and the walkway to the front door was unwelcoming. The front porch now extends and encourages "porch culture". It now says “Hello people, hello bicycles, as well as hello electric cars.”  A public edible garden in the front yard welcomes neighbors, friends, and family.</p>
+                        <p class="body-md"> Like many American homes, LilyPad originally had an imposing garage and the front walkway was awkward and unwelcoming. The entrance now encourage "porch culture," and the garage is softened by a lush pergola. A public edible garden in the front yard welcomes neighbors, friends, and family. It now says “Hello people, hello bicycles, as well as hello electric cars.”  </p>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Community First</h2>
-                        <p class="body-md">Many houses are designed so that people are far apart. LilyPad instead prioritizes spaces that help people connect, collaborate, and play. It's ready to host large potlucks. There are two dishwashers, a cooking and cleaning sink, as well as five areas to chat, play, and connect. It's ready to host workshops or for chefs to teach cooking classes.</p>
+                        <p class="body-md">Many houses are designed so that people are far apart. LilyPad instead prioritizes spaces that help people connect, collaborate, and play. It's ready to host large potlucks. There are two dishwashers, cooking and cleaning sinks, as well as five areas to chat, play, and connect. It's ready to host workshops or for chefs to teach cooking classes.</p>
                     </div>
                 </div>
 
@@ -117,7 +117,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Creating Healthy Spaces</h2>
-                        <p class="body-md">Conventional buildings off-gas dangerous chemicals known as volatile organic compounds (VOCs). By coupling tight air sealing with a Heat Recovery Ventilation system, your air is constantly fresh, filtered, and oxygenated—replaced every three hours. This means fewer allergens, molds, problems, and keeps you and your family alert and sniffle-free.</p>
+                        <p class="body-md">Conventional buildings off-gas dangerous chemicals known as volatile organic compounds (VOCs). By coupling tight air sealing with a Heat Recovery Ventilation system, your air can be constantly fresh, filtered, and oxygenated — replaced every three hours. This means fewer allergens, molds, or other problems, and keeps you and your family alert and sniffle-free.</p>
 
 
                     </div>
@@ -132,7 +132,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Bringing the Outside In</h2>
-                        <p class="body-md"> In LilyPad, tall walls of windows create a seamless bridge between the outdoor with the indoor spaces. The backyard grass comes as close to the door as possible, so you step right out into your lawn. Gathering spaces in the backyard and side yard connect directly to the kitchen and catch the setting evening sun – perfect for dinner parties. </p>
+                        <p class="body-md"> In LilyPad, tall walls of windows create a seamless bridge between the outdoor and indoor spaces. The backyard grass comes as close to the door as possible, so you step right out into your lawn. Gathering spaces in the backyard and side yard connect directly to the kitchen and catch the setting evening sun – ideal for dinner parties. </p>
                     </div>
                 </div>
             </div>
