Content tweaks to experience.html

--- a/experience.html
+++ b/experience.html
@@ -49,8 +49,8 @@
                 </div>
                 <div class="split left">
                     <div class="copy-block">
-                        <h2>Perfect Lighting</h2>
-                        <p class="body-md">Every room should have appropriate L.E.D. lighting. Task-lighting helps you focus on a project. Gallery lighting proudly displays your artwork. Wall washing lights create a warm ambiance and motion-activated path lighting stops you from tripping over your pets in the middle of the night. L.E.D. lighting comes in the all the varieties you'd expect from traditional bulbs, including filament bulbs.</p>
+                        <h2>Layered Lighting</h2>
+                        <p class="body-md">Every room should have appropriate L.E.D. lighting. Task-lighting helps you focus on a project. Gallery lighting proudly displays your artwork. Wall washing lights create a warm ambiance, and motion-activated path lighting stops you from tripping over your pets in the middle of the night. L.E.D. lighting comes in the all the varieties you'd expect from traditional bulbs, including filament or "Edison" bulbs.</p>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Stops Sound Pollution</h2>
-                        <p class="body-md">Through its use of triple-pane windows, a ductless HVAC system, individual room insulation, and drop door seals, you can have great sound isolation. This lets roommates work in peace and isolates you from outdoor noise so you won't wake up to the morning garbage trucks. A remote blower on the range hood is super quiet so won't disrupt conversation.</p>
+                        <p class="body-md">Through its use of triple-pane windows, a ductless HVAC system, interior wall insulation, and drop seals on doors, you can have great sound isolation. This lets roommates work in peace and isolates you from outdoor noise so you won't wake up to the morning garbage trucks. A remote blower for the range hood is super quiet so won't disrupt conversation.</p>
                     </div>
                 </div>     
             </div>
@@ -84,7 +84,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Breathe Easy</h2>
-                        <p class="body-md">Traditional buildings aren't well insulated or air-sealed so are drafty and have inconsistent temperatures. High-performance homes maintain a comfortable and consistent temperature. The air is cycled every three hours with fresh, filtered oxygenated outdoor air free of pollutants. This keeps you alert, comfortable, and sniffle-free year-round.</p>
+                        <p class="body-md">Traditional buildings aren't well insulated or air-sealed so are drafty and have inconsistent temperatures. High-performance homes maintain comfortable, uniform temperature throughout. The air is cycled every three hours with fresh, filtered oxygenated outdoor air free of pollutants. This keeps you alert, comfortable, and sniffle-free year-round.</p>
                     </div>
                 </div>     
             </div>
@@ -97,7 +97,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Year-round Comfort</h2>
-                        <p class="body-md">In a High-Performance home you never having to sacrifice your comfort. Room-specific temperatures let your whole family be comfortable. The recirculating hot water loop is triggered by a motion sensor that makes hot water instantly available. This paired with a high-efficiency water heater and push-button shower head activation means guilt-free showers.</p>
+                        <p class="body-md">In a High-Performance home you never have to sacrifice your comfort. Room-specific temperatures let your whole family be comfortable. The recirculating hot water loop is triggered by a motion sensor that makes hot water instantly available. This paired with a high-efficiency water heater and push-button shower head control means guilt-free showers.</p>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Time and Hassle Saving</h2>
-                        <p class="body-md">Several convenient features save you time. A smart lock gets you into your home easily and securely. The ability to remotely open the garage lets guests easily park and charge up their electric cars. Dual dishwashers make cleanup fast and easy. A remote sewer diversion switch next to sinks makes it simple if you need to pour bleach down the drain and not into your landscape.</p>
+                        <p class="body-md">Several convenient features save you time. A smart lock gets you into your home easily and securely. The ability to remotely open the garage lets guests easily park their bikes. Dual dishwashers make cleanup fast and easy. Remote sewer diversion switches next to bathrooms makes it simple if you need to save your landscape from something nasty going down the drain.</p>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Low Maintenance</h2>
-                        <p class="body-md">Let your home work for you. Spend less time repairing, cleaning, maintaining, and spending. Choose counters and hardwood floors that are easy to clean and hide dirt. A dog washing station keeps mud out of your house and a mud room stops humans from bringing in dirt. Spend less time cleaning your home and more time living your life.</p>
+                        <p class="body-md">Let your home work for you. Spend less time repairing, cleaning, maintaining, and spending. Choose counters and hardwood floors that are easy to clean and hide dirt and wear. A dog washing station keeps mud out of your house, and a mud room stops humans from bringing in dirt. Spend less time cleaning your home and more time living your life.</p>
                     </div>
                 </div>
             </div>
