Content tweaks to home.html

--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Innovative Design</h2>
-                        <p class="body-md">LilyPad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era tract house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
+                        <p class="body-md">LilyPad’s design marries the latest in technology and high-performance with 21st century architecture that pays homage to its 1950’s-era tract house roots. It’s community-centered design fosters relationships and encourages a healthy, joyful life.</p>
 
                         <button  class="float-right learn-more">
                             <a href="design.html">Learn More ></a>
