--- a/systems.html
+++ b/systems.html
@@ -75,7 +75,7 @@
     <div class="container" id="systems">
 
         <p>
-            LilyPad goes further than net-zero energy, it's net-positive. With a massive 13kW solar array, it produces 3x more energy than it consumes. By recycling water through the greywater system, it significantly cuts its water need. Additionally, air-sealing and super-insulated walls create best-in-class efficiency and a great home experience. Let's build high-performance homes that work for us, rather than us working to maintain our homes.
+            LilyPad goes further than net-zero energy; it's net-positive. With a massive 12kW solar array, it produces more than enough for heating, cooling, EV charging, and everything else. By recycling water through the greywater system, it significantly cuts its water need. Additionally, air-sealing and super-insulated walls create best-in-class efficiency and a great home experience. Let's build high-performance homes that work for us, rather than us working to maintain our homes.
         </p>
         <div class="image-text-wrapper">
             <a href="Systems/electricity.html"><img src="IMG/Systems/solar-system.jpg" /></a>
