update homeowner quote on home.html

--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
 
     <div class="banner">
         <blockquote>
-            <span class="quote-mark">“</span>Building quality, high-performance homes is cost-effective and should be incentivized. This creates a joyful living environments that makes your life easy, comfortable, and fun.<span class="quote-mark">”</span>                         
+            <span class="quote-mark">“</span>We didn't know what we were missing until we lived in a high-performance, all-electric home. We hope everyone can live this experience in the better world we're building together.<span class="quote-mark">”</span>                         
         </blockquote>
         <p class="quote-citation">-LilyPad Homeowners</p>
     </div>
