content update for climate.html

--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -82,7 +82,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Double &amp; Triple-Pane Windows</h2>
-                        <p class="body-md">Traditional single pane windows are very poor insulators. Double or triple-pane windows trap air on the inside of the window, proving a much greater insulation value while maintaining beautiful vistas. In LilyPad, the windows that can swing open are double-pane, while the fixed windows are triple-paned. This is due to the increased weight of triple-paned windows are less suitable for moving.</p>
+                        <p class="body-md">Traditional single pane windows are very poor insulators. Double or triple-pane windows trap gas on the inside of the window, proving a much greater insulation value while maintaining beautiful vistas. In LilyPad, the windows that can swing open are double-pane, while the fixed windows are triple-paned. This is due to the increased weight of triple-paned windows are less suitable for moving.</p>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Individual Room Temperature</h2>
-                        <p class="body-md">Most homes have a single thermostat so Dad might be trying to keep the heater off to save money while Mom will be shivering because she runs cooler. This can be solved by allowing individual control of heating set points for each room. Also, by insulating the interior walls as well as well as having great overall external insulation, your home will be perfect and comfortable for everybody.</p>
+                        <p class="body-md">Most homes have a single thermostat so Dad might be trying to keep the heater off to save money while Mom will be shivering because she runs cooler. This can be solved by allowing individual control of heating set points for each room. Also, by insulating the interior walls as well as having great overall external insulation, your home will be perfect and comfortable for everybody.</p>
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Building Orientation</h2>
-                        <p class="body-md">Building orientation is another critical factor to capture the most passive solar sunlight in the winter, while avoiding excessive heat in the summer. A conventional subdivision has lots that have a variety of North/South orientations. When choosing a building and a lot, it’s important to note which side will be south-facing (in the northern hemisphere) to capture the most passive solar heat.</p>
+                        <p class="body-md">Building orientation is another critical factor to capture the most passive solar sunlight in the winter, while avoiding excessive heat in the summer. A conventional subdivision has building lots with a variety of North/South orientations. When choosing a lot and designing a building for it, it’s important to note which side will be south-facing (in the northern hemisphere) to capture the most passive solar heat.</p>
                     </div>
                 </div>
             </div>
