content tweaks for electricity.html

--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -57,7 +57,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>100% Electric</h2>
-                        <p class="body-md">Your water heater, climate control, washer/dryer, and cooking appliances can all run 100% off clean electric power. Charge several electric cars. Power perfect temperature with a heat pump. Have great combustion free cooking with an induction cooktop, combination oven, and more. Make money selling energy back to the grid. Usher in the end of the fossil fuel era. Take control over your life and be your own power plant.</p>
+                        <p class="body-md">Your water heater, climate control, washer/dryer, and cooking appliances can all run 100% off clean electric power. Charge several electric cars. Power perfect temperature with a heat pump. Have great combustion free cooking with an induction cooktop, combination oven, and more. Make money selling energy back to the grid. Usher in the end of the fossil fuel era. Take control over your life and keep the lights on when the power company can't.</p>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Electric Car Charging</h2>
-                        <p class="body-md">Solar power lets you to be your own power plant. Now you can drive electric and stop paying for gas, deal with maintenance headaches of a gas engine, or worry about the emissions or smog you’re creating around your children. It’s truly empowering to drive on free clean sunshine you’ve produced.</p>
+                        <p class="body-md">Solar power lets you to be your own power plant. Now you can drive electric and stop paying for gas, deal with maintenance headaches of a gas engine, or worry about the emissions or smog you’re creating around your children. It’s truly empowering to drive on free clean sunshine you’ve captured.</p>
 
                     <button class="learn-more" onclick="location.href='ev-charging.html'" type="button">Learn More</button>
                     </div>
@@ -105,7 +105,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>L.E.D. Lighting</h2>
-                        <p class="body-md">L.E.D. lighting is efficient, long-lasting, aesthetically pleasing, and comes in the same variety of styles that you’d expect from traditional lighting, like filament bulbs. Have perfect lighting for every situation: gallery lighting for artwork, task lighting for projects, wall washers for ambiance and motion-detection path lighting lets you find your way in the night without disturbing people or pets.</p>
+                        <p class="body-md">L.E.D. lighting is efficient, long-lasting, aesthetically pleasing, and comes in the same variety of styles that you’d expect from traditional lighting, like filament or "Edison" bulbs. Have perfect lighting for every situation: gallery lighting for artwork, task lighting for projects, wall washers for ambiance and motion-detection path lighting lets you find your way in the night without disturbing people or pets.</p>
                     </div>
                 </div>
             </div>
