Content updates for greywater.html

--- a/Systems/greywater.html
+++ b/Systems/greywater.html
@@ -47,34 +47,34 @@
 
          <iframe class="embedded-youtube" width="100%" src="https://www.youtube.com/embed/S27jhmtem8M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-         <p>If you’ve ever travelled in a self-contained recreational vehicle, you’re probably familiar with the idea of black water and greywater, as they are stored in different holding tanks. In a house, black water comes from toilets, and greywater comes from showers and lavatories. 
+         <p>If you’ve ever travelled in a self-contained recreational vehicle, you’re probably familiar with the idea of black water and greywater, as they are stored in different holding tanks. In a house, black water comes from toilets, and greywater comes from showers, washing machines, and sinks. 
 
-        <p>The black water needs to go directly into a sewer, but the greywater is minimally contaminated, and is potentially available for some non-drinking uses, such as irrigation or toilet tank refilling.</p>
+        <p>The black water needs to go directly into a sewer, but the greywater is minimally contaminated, and is potentially available for some non-drinking uses, such as irrigation or toilet flushing.</p>
 
         <figure class="clear">
             <img src="../IMG/Deep-Dive/greywater-tank.jpg" />
             <figcaption>Greywater Holding Tank in Basement</figcaption>
         </figure>
 
-        <p>In new construction or in an extensive remodelling, there is an opportunity for constructing a second set of drain pipes for greywater. LilyPad employs a system that incorporates a holding tank, fresh water flush system, and motorized diverter valves. The outflow from the holding tank is pumped through a motorized index valve to each of six underground pipe runs that sequentially feeds the water to plant roots in different zones in the yard.</p>
+        <p>In new construction or in an extensive remodelling, there is an opportunity for constructing a second set of drain pipes for greywater. LilyPad employs a system that incorporates a holding tank, fresh water flush system, and motorized diverter valves. The outflow from the holding tank is pumped through a mechanized index valve to each of six underground pipe runs that sequentially feeds the water to plant roots in different zones in the yard.</p>
 
         <figure class="clear">
             <img src="../IMG/Deep-Dive/diversion-switch.jpg" />
             <figcaption>Diversion Valve Activated by Remote Switch Next to Sinks</figcaption>
         </figure>
 
-        <p>Near each greywater drain there is a button which activates a diverter valve before the holding tank. Pressing the button moves the valve, and diverts the drain flow from greywater to black water (sewer) or vice versa. That way, if you need to put something nasty down the drain, like hair dye or cleaning chemicals, you can divert the flow to the sewer, then put it back to normal greywater recovery when finished.</p>
+        <p>Near each greywater drain there is a button which activates a diverter valve before the small holding tank. Pressing the button moves the valve, and diverts the drain flow from greywater to black water (sewer) or vice versa. That way, if you need to put something nasty down the drain you don't want pouring into your landscape, like hair dye or cleaning chemicals, you can divert the flow to the sewer, then put it back to normal greywater recovery when finished.</p>
 
-        <p>The holding tank has a filtration system to prevent bacterial and algal blooms, and only requires cleaning once a year. When the tank gets full, a pump moves the stored water through the indexing valve, and out to the garden. The pump activates once every 24 hours if it hasn’t been turned on, flushing with fresh water to keep the system active and clean.</p>
+        <p>The holding tank has a filtration system to prevent bacterial and algal blooms, and only requires cleaning once a year. When the tank gets full, a pump moves the stored water through the indexing valve, and out to the garden. The pump activates at least once every 24 hours to make sure water is never stagnant for too long.</p>
 
         <figure class="clear">
             <img src="../IMG/Deep-Dive/air-admittance-valve.jpg" />
             <figcaption>Air Admittance Valve Substitutes for Traditional Venting</figcaption>
         </figure>
 
-        <p>Water conservation is increasingly important in California, as statewide water restrictions have been in force for 5 of the last 10 years, and local water and sewer district restrictions have been on and off even more frequently as droughts have dramatically impacted surface water and groundwater levels.</p>
+        <p>Water conservation is increasingly important in California, as statewide water restrictions have been in force frequently in recent years, and local water and sewer district restrictions have been on and off even more frequently as droughts have dramatically impacted surface water and groundwater levels.</p>
 
-        <p>The system installed in LilyPad was the first greywater system to be permitted in Redwood City. As such, it went through an extraordinary amount of review, and the approval process was long. The homeowners have every reason to hope that future greywater systems will be dealt with more routinely by permitting authorities.</p>
+        <p>The system installed in LilyPad was the first residential greywater system to be permitted in Redwood City. As such, it went through an extraordinary amount of review, and the approval process was long. The homeowners have every reason to hope that future greywater systems will be dealt with more routinely by permitting authorities.</p>
 
     </div>
     
